# talava-tracker

./: .gitignore  CLAUDE.md  Cargo.toml  HANDOVER.md  build.rs  config.toml  test_osc.py
docs/: architecture.md  debug-viewer-spec.md  phase2-design.md  requirement.md  tracker-spec.md  triangulation.md  vmc-setup.md
docs/inbox/: coordinate-system-and-rotation.md  distortion-correction-and-jitter.md  multi-camera-triangulation-findings.md  world-coordinate-transform.md
docs/requirements/: README.md  constraints.md  decisions.md  external-interfaces.md  functional.md  history.md  non-functional.md  open-issues.md
models/: README.md
scripts/: check_anatomy.py
src/: calibration.rs  config.rs  lib.rs  main.rs  protocol.rs  triangulation.rs  vmt.rs
src/camera/: capture.rs  mod.rs
src/pose/: crop.rs  detector.rs  keypoint.rs  mod.rs  person_detector.rs  preprocess.rs
src/render/: mod.rs  skeleton.rs  window.rs
src/tracker/: body.rs  extrapolate.rs  hip.rs  lerp.rs  mod.rs  one_euro.rs  smooth.rs
