[package]
name = "talava-tracker"
version = "0.1.0"
edition = "2021"
default-run = "tracker_bevy"

[features]
default = []
cuda = ["ort/cuda"]

[dependencies]
rosc = "0.10"      # OSCプロトコル（VMT連携）
anyhow = "1.0"     # エラーハンドリング
ort = { version = "2.0.0-rc.9", features = ["coreml"] } # ONNX Runtime
ndarray = "0.17"   # テンソル操作
opencv = { version = "0.93", default-features = false, features = ["videoio", "imgproc", "imgcodecs", "aruco", "calib3d", "objdetect"] }
minifb = "0.27"    # シンプルなウィンドウ描画
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
bevy = { version = "0.15", default-features = false }
nalgebra = "0.33"  # 三角測量の線形代数
signal-hook = "0.4.3"
chrono = "0.4.43"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1"
bytes = "1"
futures = "0.3"

[[bin]]
name = "bench_inference"
path = "src/bin/bench_inference.rs"

[[bin]]
name = "tracker_bevy"
path = "src/bin/tracker_bevy.rs"

[[bin]]
name = "calibrate"
path = "src/bin/calibrate.rs"

[[bin]]
name = "generate_board"
path = "src/bin/generate_board.rs"

[[bin]]
name = "camera_probe"
path = "src/bin/camera_probe.rs"

[[bin]]
name = "camera_view"
path = "src/bin/camera_view.rs"

[[bin]]
name = "camera_server"
path = "src/bin/camera_server.rs"

[[bin]]
name = "inference_server"
path = "src/bin/inference_server.rs"
