[package]
name = "talava-tracker"
version = "0.1.0"
edition = "2021"
[features]
default = ["desktop"]
imgproc = ["dep:opencv"]
desktop = ["imgproc", "opencv/videoio", "dep:signal-hook"]
cuda = ["ort/cuda"]

[dependencies]
rosc = "0.10"      # OSCプロトコル（VMT連携）
anyhow = "1.0"     # エラーハンドリング
ort = { version = "2.0.0-rc.9", default-features = false, features = ["std", "ndarray", "tracing", "download-binaries", "copy-dylibs", "tls-rustls"] } # ONNX Runtime
ndarray = "0.17"   # テンソル操作
opencv = { version = "0.93", default-features = false, features = ["imgproc", "imgcodecs"], optional = true }
image = "0.25"
toml = "0.9.11"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33"  # 三角測量の線形代数
signal-hook = { version = "0.4.3", optional = true }
chrono = "0.4.43"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bincode = "1"
bytes = "1"
futures = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["coreml"] }

[target.'cfg(target_os = "windows")'.dependencies]
ort = { version = "2.0.0-rc.9", features = ["directml"] }

[[bin]]
name = "camera_probe"
path = "src/bin/camera_probe.rs"

[[bin]]
name = "camera_server"
path = "src/bin/camera_server.rs"

[[bin]]
name = "inference_server"
path = "src/bin/inference_server.rs"
required-features = []
